--- a/src/styles.css
+++ b/src/styles.css
@@ -50,7 +50,7 @@ body {
   top: 5rem;
   right: 5rem;
   background-color: #fe5d25;
-  z-index: 8;
+  z-index: 10;
   transition: transform 0s;
 }
 
@@ -341,6 +341,19 @@ body {
 }
 #photo:hover img {
   visibility: hidden;
+}
+
+.link {
+  text-decoration: none;
+  color: black;
+  font-weight: 1000;
+  background-image: linear-gradient(to top, white 35%, transparent 35%);
+}
+.link:hover {
+  background-color: white;
+}
+.link::visited {
+  text-decoration: none;
 }
 
 /*# sourceMappingURL=styles.css.map */
